Adds responsive improvements

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -131,7 +131,7 @@ import MonogramLight from '../assets/monogram-light-mode.svg?raw';
 			</button>
 		</header>
 
-		<main class="flex flex-col md:flex-row items-center justify-center text-center md:text-left max-w-md md:max-w-4xl w-full md:gap-8">
+		<main class="flex flex-col lg:flex-row items-center justify-center text-center lg:text-left max-w-md lg:max-w-6xl w-full md:gap-10">
 			<div id="monogram" class="w-sm md:w-md h-auto mb-4 md:mb-0 md:flex-shrink-0">
 				<div class="monogram-light">
 					<Fragment set:html={MonogramLight} />
@@ -140,9 +140,9 @@ import MonogramLight from '../assets/monogram-light-mode.svg?raw';
 					<Fragment set:html={MonogramDark} />
 				</div>
 			</div>
-			<div id="about" class="flex flex-col items-center md:items-start justify-center text-center md:text-left max-w-md md:max-w-none w-full">
-				<h1 class="text-4xl font-bold mb-6 md:text-4xl" style="color: rgb(var(--text-primary));">Amet Alvirde</h1>
-				<p class="mx-10 md:mx-0 text-balance text-lg leading-relaxed " style="color: rgb(var(--text-secondary));">
+			<div id="about" class="flex flex-col items-center lg:items-start justify-center text-center lg:text-left max-w-md lg:max-w-none w-full">
+				<h1 class="text-4xl font-bold mb-6 lg:text-6xl" style="color: rgb(var(--text-primary));">Amet Alvirde</h1>
+				<p id="bio" class="mx-10 md:mx-0 lg:max-w-2xl text-balance text-lg md:text-xl lg:text-2xl leading-relaxed " style="color: rgb(var(--text-secondary));">
 				Experiencia humana polímata viviendo un sistema de múltiples consciencias a través del ininterrumpido, inevitable e irreversible viaje hacia mi destino.
 				</p>
 			</div>
