feat: Adds first attempt at alternate design
I want to go with an utilitarian style instead of a brutalist one.

Doing some exlploration on that

--- a/src/components/MonogramDisplay.astro
+++ b/src/components/MonogramDisplay.astro
@@ -3,7 +3,7 @@ import MonogramDark from '../assets/monogram-dark-mode.svg?raw';
 import MonogramLight from '../assets/monogram-light-mode.svg?raw';
 ---
 
-<div id="monogram" class="w-xs md:w-sm lg:w-lg h-auto mb-0 md:mb-0 md:flex-shrink-0">
+<div id="monogram" class="w-full max-w-[200px] lg:max-w-[280px] h-auto">
 	<div class="monogram-light">
 		<Fragment set:html={MonogramLight} />
 	</div>
