refactor: Adds code cleanup for site design transition Fixes some responsiveness issues

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -101,7 +101,7 @@ const {
 		<!-- Canonical URL -->
 		<link rel="canonical" href="https://www.ametalvirde.com/" />
 	</head>
-	<body style="background-color: rgb(var(--bg-primary)); color: rgb(var(--text-primary));" class="h-[100dvh] flex flex-col items-center">
+	<body style="background-color: rgb(var(--bg-primary)); color: rgb(var(--text-primary));" class="min-h-[100dvh] flex flex-col items-center">
 		<style>
 			body {
 				selection-background-color: rgb(var(--selection-bg));
